2008-02-01  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.cc (ask_yes_no_with_details): Added a new
	parameter to add a help topic icon if needed (N80020).

	* src/operations.cc (up_confirm): Add help icon for the uninstall
	dialog pointing to the right help topic (N80020).

2008-01-30  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (ip_install_loop): Add package version number
	to the output string after a successfully upgrade (N79744).
	(if_install_reply): Likewise (N79744).
	(ip_download_cur): Add package version number to the output string
	shown while the upgrading process is ongoing (N79949).
	(if_install): Likewise (N79949).

2008-01-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker-bin.cc (domains_last_modified): New global
	variable to keep track of when was the last modification for
	/etc/hildon-application-manager/domains file (N79708).
	(file_last_modified): New function to check when a file was
	modified for the last time (N79708).
	(read_domain_conf): Update the new domains_last_modified variable
	by calling to file_last_modified (DOMAIN_CONF) (N79708).
	(handle_request): Check if the domains file was modified since the
	last time it was read, to know whether or not is needed to call to
	read_domain_conf again to keep global variables updated (N79708).

2008-01-23 Felipe Erias Morandeira  <femorandeira@maemo.org>

        * src/util.cc (package_info_func): retrieve the information that
        will be shown for a given package, and fill the cell renderer with it.
        (make_global_package_list): create a treeview using Modest's cell renderers

        * src/modest-hbox-cell-renderer.[hc]: added legal notice

        * src/modest-vbox-cell-renderer.c : added legal notice
        (modest_vbox_cell_renderer_get_size) don't expand for invisible children

        * src/modest-vbox-cell-renderer.h : added legal notice

        * src/Makefile.am: updated to use the new code files.
